--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,8 @@ jobs:
       # and building your site automatically.
       - name: Install, build, and upload your site
         uses: withastro/action@v2
+        env:
+          PUBLIC_CSV_DATA_URL_LUNCH: ${{ vars.PUBLIC_CSV_DATA_URL_LUNCH }}
 
   deploy:
     needs: build
